# crontab-ui

./: .gitignore  README-RU.md  README.md  cron.py  cron_tools.py  gui.py  main.py  pyproject.toml  start.sh  widgets.py
components_gui/: __init__.py  button_update.py  create_job.py  edit_job.py  header_menu.py  job_block.py  read_pdf.py  table.py  value_data.py
components_gui/components_new_job/: value_data.py
components_gui/windows/: create_job.py
