[project]
name = "crontab-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "croniter>=6.0.0",
    "flet[all]>=0.27.6",
    "python-crontab>=3.2.0",
]

[dependency-groups]
dev = [
    "croniter>=6.0.0",
    "python-crontab>=3.2.0",
    "ruff>=0.11.2",
]
